5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3396/executions/1578_1559.log
== TEST (2019-03-15 18:59:01) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.???)
print(.upper("frase"))
-- ERROR:
File "XXXX", line 2
    print(frase.???)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 18:59:54) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.uper())

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(frase.uper())
AttributeError: 'str' object has no attribute 'uper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 20:04:58) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.uper())

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(frase.uper())
AttributeError: 'str' object has no attribute 'uper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 20:05:16) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())

-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 20:05:22) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())

-- EXECUTION TIME:
0.177749
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
